css/header.css
html, body {
    height: 100%;
}

main {
    flex: 1 0 auto;
}

.about-me {
    flex-shrink: 0;
}

body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    
}

h1, h2, p {
    margin: 0;
}

h1 {
    padding-left: 2em;
}

header {
    display: flex;
    width: 100%;
    padding: 1em 0;
}

ul {

    display: flex;
    width: 100%;
    justify-content: space-around;
    text-align: center;
}

li {
    list-style: none;
    padding-right: 2em;
}

.button {
    display:inline-block;
    position: relative;
    text-decoration: none;
    color: white;
    background: #2cb5e8;
    padding: 1em 2em;
    border: 1px black solid;
    border-radius: 10px;
    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
}

.button:before {
    content: "";
    position: absolute;
    width: 80%;
    height: 2px;
    left: 0;
    right: 0;
    margin: -5px auto;
    bottom: 1em;
    background-color: #fff;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
}

.button:active {
    background-image: linear-gradient(141deg, #9fb8ad 4%, #1fc8db 51%, #2cb5e8 75%);
}

.button:hover:before,
.button:focus:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}

@media (max-width: 620px) {
    .button {
        display: block;
        margin:0.4em auto;
    }

    header {
        flex-direction: column;
        width: 100%;
    }

    h1 {
        text-align: center;
        padding: 0;
    }

    ul {
        flex-direction: column;
        padding: 0;
        margin: 0 auto;
    }

    li {
        padding: 0;
        margin: 2em 0;
    }
}

